# speet

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
speet/: ScaledMinHash.py  __init__.py  __main__.py
tests/: test_scaled.py
